--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,4 +22,8 @@
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
+  
+  <welcome-file-list>
+  	<welcome-file>navigate.jsf</welcome-file>
+  </welcome-file-list>
 </web-app>
