Hito 3: Creación de vista de registro. Utilidad para validar formularios. Vista de error y de éxito al momento del registro. Se agrega en el web.xml la página de inicio por defecto: bean-properties.jsf

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -24,6 +24,6 @@
   </listener>
   
   <welcome-file-list>
-  	<welcome-file>navigate.jsf</welcome-file>
+  	<welcome-file>bean-properties.jsf</welcome-file>
   </welcome-file-list>
 </web-app>
